--- a/allin_ui_auto_test/pom.xml
+++ b/allin_ui_auto_test/pom.xml
@@ -9,4 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+    </dependencies>
 </project>
